# ev1527Lib

./: .gitignore  CMakeLists.txt  README.md  ev1527.h  ev1527decode.c  evType.h
